--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
 		"gulp-rename": "latest",
 		"gulp-replace": "latest",
 		"gulp-responsive": "latest",
-		"gulp-sass": "latest",
+		"gulp-sass": "^4.0.0",
 		"gulp-ttf2woff": "latest",
 		"gulp-ttf2woff2": "latest",
 		"gulp-uglify-es": "latest",
 		"gulp-webp-html": "^1.0.2",
 		"gulp-webpcss": "^1.1.1",
 		"imagemin-webp": "latest",
+		"sass": "^1.35.1",
 		"transform-runtime": "0.0.0",
 		"webp-converter": "^2.2.3"
 	}
